deploy/kubernetes/41-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: vdb
  labels:
    app: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: us-central1-docker.pkg.dev/ci-dev-376017/vdb-images/vdb-worker:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      restartPolicy: Always
